# clench

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
clench/: CMakeLists.txt  clench.cc  clench.h  debug.h  ghal.h  graphics.h  input.h  rhi.h  window.h  wsal.h  wsi.h
clench/acri/: CMakeLists.txt  backend.cc  backend.h  basedefs.h  brush.cc  brush.h  canvas.h  device.cc  device.h  geometry.cc  geometry.h  gradient.cc  gradient.h  render_target.h  resource.cc  resource.h
clench/acri/backends/: CMakeLists.txt  register.cc
clench/acri/backends/opengl/: CMakeLists.txt  backend.cc  backend.h  device.cc  device.h
clench/acri/backends/opengl/shaders/: triangle_vert_330.glsl  (+5 more)
clench/ahal/: CMakeLists.txt  backend.cc  backend.h  basedefs.h  buffer.cc  buffer.h  device.cc  device.h  except.cc  except.h  resource.cc  resource.h
clench/ahal/backends/: CMakeLists.txt  register.cc
clench/ahal/backends/alsa/: CMakeLists.txt  backend.cc  backend.h  device.cc  device.h  except.cc  except.h
clench/audio/: CMakeLists.txt  codec.h  wave.h
clench/audio/codec/: CMakeLists.txt
clench/audio/codec/waveform/: decoder.cc  decoder.h
clench/base/: CMakeLists.txt  attribs.h  basedefs.h  clsmacro.h  except.cc  except.h  except_base.cc  except_base.h  uuid.h
clench/debug/: CMakeLists.txt  console.cc  console.h  log.hh  mm.hh
clench/ghal/: CMakeLists.txt  backend.cc  backend.h  basedefs.h  buffer.cc  buffer.h  color.h  command.h  device.cc  device.h  except.cc  except.h  resource.cc  resource.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_layout.cc  vertex_layout.h  views.cc  views.h
clench/ghal/backends/: CMakeLists.txt  register.cc
clench/ghal/backends/d3d11/: CMakeLists.txt  backend.cc  backend.h  buffer.cc  buffer.h  device.cc  device.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_layout.cc  vertex_layout.h  views.cc  views.h
clench/ghal/backends/opengl/: CMakeLists.txt  backend.cc  backend.h  buffer.cc  buffer.h  device.cc  device.h  except.cc  except.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_layout.cc  vertex_layout.h  views.cc  views.h
clench/ghal/cpu/: CMakeLists.txt
clench/ghal/cpu/x86_64/: CMakeLists.txt  texture_msabi.asm  texture_sysv.asm
clench/graphics/: CMakeLists.txt  backend.cc  backend.h  base.h  codec.cc  codec.h  element.h  init.cc  init.h
clench/graphics/backends/opengl/: CMakeLists.txt  baked.h  base.h  context.h  glad.c  opengl.h
clench/graphics/base/: color.hh  shader.h  texture.h  vtxbuf.h
clench/graphics/codec/: CMakeLists.txt
clench/graphics/codec/png/: CMakeLists.txt  decoder.cc  decoder.h
clench/input/: CMakeLists.txt  init.cc  init.h  keyboard.h
clench/l10n/: l10n.hh
clench/math/: CMakeLists.txt  basedefs.h  intrinsics.h  mat.h  mat_def.inl  mat_op.inl  misc.cc  misc.h  vec.h  vec_def.inl  vec_op.inl
clench/mod/: CMakeLists.txt  basedefs.h  module.cc  module.h
clench/mod/win32/: CMakeLists.txt
clench/mod/win32/static/: CMakeLists.txt
clench/modrt/: CMakeLists.txt  modrt.cc  modrt.h
clench/modrt/unix/dyn/: dllmain.cc
clench/modrt/win32/: CMakeLists.txt
clench/modrt/win32/dyn/: dllmain.cc
clench/modrt/win32/shared_link/: dllmain.cc
clench/modrt/win32/static/: main.cc
clench/modrt/win32/static_link/: CMakeLists.txt
clench/package/: package.hh
clench/plat/: CMakeLists.txt  basedefs.h  coroutine.cc  coroutine.h  fs.cc  fs.h  thread.cc  thread.h  uuid.h
clench/plat/linux/: CMakeLists.txt  fs.cc  thread.cc
clench/plat/win32/: CMakeLists.txt  coroutine.cc  thread.cc  uuid.cc
clench/rhi/: CMakeLists.txt  backend.cc  backend.h  basedefs.h  buffer.cc  buffer.h  device.cc  device.h  resource.cc  resource.h  shader.cc  shader.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h
clench/rhi/backends/: CMakeLists.txt  register.cc
clench/rhi/backends/d3d11/: CMakeLists.txt  backend.cc  backend.h  device.cc  device.h  shader.cc  shader.h  vertex_array.cc  vertex_array.h
clench/rhi/backends/opengl/: CMakeLists.txt  backend.h
clench/rmf/: CMakeLists.txt  basedefs.h  respack.cc  respack.h  restype.cc  restype.h
clench/tcm/: CMakeLists.txt  basedefs.h  decoder.cc  decoder.h
clench/tcm/decoders/: CMakeLists.txt  register.cc
clench/tcm/decoders/png/: CMakeLists.txt  decoder.cc  decoder.h
clench/utils/: CMakeLists.txt  assert.cc  assert.h  basedefs.h  bitarray.h  byteord.hh  dynlib.hh  logger.cc  logger.h  membuf.hh  misc.h  rcobj.cc  rcobj.h  scope_guard.h  stream.cc  stream.h  stream.hh  uuid.cc  uuid.h
clench/utils/linux/: CMakeLists.txt  assert.cc
clench/utils/win32/: CMakeLists.txt  assert.cc
clench/vwc/: CMakeLists.txt  basedefs.h  button.cc  button.h  control.cc  control.h  root_window.cc  root_window.h
clench/window/: CMakeLists.txt  win32.h  window.cc  window.h  x11.h
clench/window/win32/: CMakeLists.txt  window.cc  window.h
clench/window/x11/: CMakeLists.txt
clench/wsal/: CMakeLists.txt  backend.cc  backend.h  basedefs.h  except.cc  except.h  init.h  keyboard.h  mouse.cc  mouse.h  window.cc  window.h
clench/wsal/backends/: CMakeLists.txt  register.cc
clench/wsal/backends/win32/: CMakeLists.txt  backend.cc  backend.h  init.cc  keymap.cc  keymap.h  window.cc  window.h
clench/wsal/backends/x11/: CMakeLists.txt  backend.cc  backend.h  keymap.cc  keymap.h  window.cc  window.h
clench/wsal/unix/: CMakeLists.txt  init.cc  keymap.cc  keymap.h  window.cc
clench/wsal/win32/: CMakeLists.txt  keymap.cc  keymap.h  window.cc
clench/wsi/: CMakeLists.txt  basedefs.h  init.h  keyboard.h  mouse.h  window.h
clench/wsi/unix/: keymap.cc  keymap.h  window.cc
clench/wsi/win32/: CMakeLists.txt  init.cc  keymap.cc  keymap.h  window.cc  window.h
editor/: CMakeLists.txt  editor_conf.json  graphics.cc  graphics.h  main.cc  test_pixel.hlsl  test_vertex.glsl  window.cc  window.h
engine/: CMakeLists.txt  graphics.cc  graphics.h  main.cc  test.hlsli  test_frag.glsl  test_vertex.hlsl  window.cc  window.h
example/test/: CMakeLists.txt  main.cc  sprite.fsh  sprite.vsh
(+23 files in other folders)
