function(clench_add_module module_name)
    if(${CLENCH_BUILD_MODE} STREQUAL "development")
        add_library(${module_name} SHARED)
    elseif(${CLENCH_BUILD_MODE} STREQUAL "release")
        add_library(${module_name} STATIC)
    endif()

    get_property(MODULE_NAME_LIST GLOBAL PROPERTY CLENCH_MODULE_NAME_LIST)
    list(APPEND MODULE_NAME_LIST ${library_name})
    set_property(GLOBAL PROPERTY CLENCH_MODULE_NAME_LIST ${MODULE_NAME_LIST})
endfunction()

add_subdirectory("base")
add_subdirectory("math")
add_subdirectory("wsi")
add_subdirectory("plat")
add_subdirectory("rhi")
add_subdirectory("utils")