file(GLOB SRC *.h *.cc)
add_executable(clcedit ${SRC})
set_target_properties(clcedit PROPERTIES CXX_STANDARD 17)
target_link_libraries(clcedit PUBLIC clcutils clcwsal clcghal clcvwc)

clench_add_component_dependency_to_target(clcedit clcutils)
clench_add_component_dependency_to_target(clcedit clcwsal)
clench_add_component_dependency_to_target(clcedit clcghal)
clench_add_component_dependency_to_target(clcedit clcvwc)
clench_add_component_dependency_to_target(clcedit clcplat)
